--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark">
     <head>
         <meta charset="utf-8" />
+        <meta name="referrer" content="no-referrer" />
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
         <meta name="viewport" content="width=device-width" />
         %sveltekit.head%
