--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width" />
         %sveltekit.head%
     </head>
-    <body data-sveltekit-preload-data="hover" data-theme="skeleton">
+    <body data-sveltekit-preload-data="hover" style="background-color: white;" data-theme="skeleton">
         <div style="display: contents">%sveltekit.body%</div>
     </body>
 </html>
