--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover" style="background-color: white">
-        <div style="display: contents">%sveltekit.body%</div>
+        <div class="contents">%sveltekit.body%</div>
     </body>
 </html>
