refactor(ui): move components to own pages

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
         <meta name="referrer" content="no-referrer" />
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
         <meta name="viewport" content="width=device-width" />
+        <title>HATiD</title>
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
