--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="referrer" content="no-referrer" />
-        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <title>HATiD</title>
         %sveltekit.head%
