chore: update theme configuration

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
         <title>HATiD</title>
         %sveltekit.head%
     </head>
-    <body data-sveltekit-preload-data="hover">
+    <body data-sveltekit-preload-data="hover" data-theme="hatid">
         <div class="contents h-full overflow-hidden">%sveltekit.body%</div>
     </body>
 </html>
